# Termify

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README_Termify.md  build.sh  compile_commands.json  delete.sh  go.mod  shell.nix
cmd/: main.go
internal/containers/: linked_list.go  linked_list_test.go
internal/logs/: interface.go  logger.go
scripts/: build.sh  release.sh
src/: main.cpp
src/App/: Application.cpp  Application.hpp
src/Core/: AudioDownloader.cpp  AudioDownloader.hpp  Cli.cpp  Cli.hpp  Common.hpp  Defines.hpp  FFmpegDecoder.cpp  FFmpegDecoder.hpp  Mixer.cpp  Mixer.hpp  RingBuffer.cpp  RingBuffer.hpp
